<resources>
    <string name="app_name">Smile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="add_pruduct">add pruduct</string>
    <string name="over_view">Over View</string>
    <string name="perfume_name">Perfume Name</string>
    <string name="img">img</string>
    <string name="gramm_price">gramm Price</string>
    <string name="company_name">Company Name</string>
    <string name="up_load">Up Load</string>
    <string name="addidas_black">Addidas Black</string>
    <string name="for_men">for men</string>
    <string name="textview">TextView</string>
    <string name="type">Type</string>
    <string name="adids_black">Adids black</string>
    <string name="man">man</string>
    <string name="_2_5">2.5</string>
    <string name="brand">Brand</string>
    <string name="price_g">Price g</string>
    <string name="adidas_black">Adidas Black</string>
    <string name="discription">Discription</string>
    <string name="perfum_start">Perfum Start</string>
    <string name="perfum_east">Perfum East</string>
    <string name="perfum_end">Perfum End</string>
    <string name="front_of_perfum">Front of Perfum :</string>
    <string name="east_of_perfume">East Of Perfume :</string>
    <string name="base_of_perfume">Base Of Perfume :</string>
    <string name="strong">strong</string>
    <string name="prices">Prices</string>
    <string name="size">Size :</string>
    <string name="price">Price :</string>
    <string name="size_20_ml">Size :   20 ML</string>
    <string name="size_30_ml">Size :   30 ML</string>
    <string name="size_40_ml">Size :   40 ML</string>
    <string name="size_50_ml">Size :   50 ML</string>
    <string name="_20_l_e">20 L.E</string>
    <string name="_30_l_e">30 L.E</string>
    <string name="payments">Payments</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="min">-</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="myfavorit">MyFavorit</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="type2">Type :</string>
    <string name="price1">Price :</string>
    <string name="count">Count :</string>
    <string name="operation_done">Operation Done</string>
    <string name="nopayment_added_yet">NoPayment added Yet</string>
    <string name="smile">Smile</string>
    <string name="total_price">Total Price :</string>
    <string name="total_price_2">Total Price :</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="about_us">About Us</string>
    <string name="contact_with_us">Contact With Us</string>
    <string name="this_operation_only_for_admin">this operation only for admin</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="place">Place Type</string>
    <string name="street_name">Street Name</string>
    <string name="num_name_of_building">Num / Name of Building</string>
    <string name="floor_number">Floor Number</string>
    <string name="flat_number">Flat Number</string>
    <string name="famous_marker">Famous Marker</string>
    <string name="phone_number">Phone Number</string>
    <string name="note_or_somthing">Note Or Somthing</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="log_out">Log out</string>
    <string name="check_position_place_from_map">Check position place from Map</string>
</resources>