<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.body.AddCartFragment">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/payments"
        android:textColor="@color/text1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_size_addcart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">
        <RadioButton
            android:id="@+id/rb_size20_addcart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_20_ml"
            android:textColor="@color/text1"
            android:textSize="20sp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_size30_addcacrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_30_ml"
            android:textColor="@color/text1"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/rb_size40_addcart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_40_ml"
            android:textSize="20sp"
            android:textColor="@color/text1" />
        <RadioButton
            android:id="@+id/rb_size50_addcart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_50_ml"
            android:textSize="20sp"
            android:textColor="@color/text1"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_addtocart_addcart"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/text1"
        android:text="@string/add_to_cart"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_size_addcart"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>



